support neg operator